# fractal-explorer

./: README.md  TECH_STACK.md  TZ.md  requirements.txt  struct.txt  test.py  test_bd.py  test_dll.py
cpp/: CMakeLists.txt  mandelbrot.c  mandelbrot.cpp  mandelbrot.h  testing.c
src/core/: color_schemes.py  fractal_engine.py  worker.py
src/db/: database.py  schema.sql
src/resources/: themes.py
src/ui/: build.py  canvas.py  color_dialog.py  gallery_dialog.py  main_window.py
